Adding all the recipes and adding the content for the page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div style="width: 30%; height: 30%; display: inline-block; position: absolute;">
             <ul style="list-style: none; width: 100%;">
-                <li><b>HTML check knoledge</b></li>
+                <li><b>HTML check knowledge</b></li>
                 <hr style="width: 3%; margin: 0 0 1%;">
                 <li style="width: 60%;">Here you are going to find the best hat you could find in whole the internet. I hope you could enojy those.</li>
                 <hr style="width: 3%; margin: 0 0 1%;">
@@ -30,7 +30,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/fQVetUxt58R3lLmsWjAxpACG7h8=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4470536-chef-johns-fresh-salmon-cakes-Chef-John-1x1-1-217fa762bb5c4d098ee1cb0044994758.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">Chef John's Fresh Salmon Cakes</li>
-                <a href="https://www.allrecipes.com/recipe/239541/chef-johns-fresh-salmon-cakes/">Fresh salmon recipe</a>
+                <a href="recipes/SalmonCakes.html">Fresh salmon recipe</a>
             </ul>
         </div>
 
@@ -39,7 +39,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/maqHC-2u-1NwE2L8BbR14zNgy7Q=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/255021-Creamy-Bay-Scallop-Spaghetti-ddmfs-1X1-5115-913f57505bcc4f98ab624d86612bad05.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">Creamy Bay Scallop Spaghetti</li>
-                <a href="#">Scallop Spaghetti recipe</a>
+                <a href="recipes/CreamyBayScallop.html">Scallop Spaghetti recipe</a>
             </ul>
         </div>
 
@@ -47,7 +47,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/i1bsA8KjhPem3OoJ7cl2b-NPbNM=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/16468-tuna-fish-salad-DDMFS-beauty-4x3-BG-2952-a26f4ca9aaf64d238b7fc0b15ddec402.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">Tuna Fish Salad</li>
-                <a href="#">go to the recipe</a>
+                <a href="recipes/TunaFishSalad.html">go to the recipe</a>
             </ul>
         </div>
 
@@ -55,7 +55,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/h55CAjXsGYHdzEVmZ1A2buLIinA=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/701871-fiery-fish-tacos-with-crunchy-corn-salsa-CookinBug-1x1-1-bae27eaa8c3d49eebf82928dfa553f2d.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">Fiery Fish Tacos with Crunchy Corn Salsa</li>
-                <a href="#">go to the recipe</a>
+                <a href="recipes/FieryFishTacoswithCrunchyCornSalsa.html">go to the recipe</a>
             </ul>
         </div>
 
@@ -63,7 +63,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/L5PsWZrL4BC2cf3eUI7Zaf_QhuM=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21176-baked-dijon-salmon-mfs-1-fd980409247d464a95ac9dcb259ae290.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">Baked Dijon Salmon</li>
-                <a href="#">go to the recipe</a>
+                <a href="recipes/BakedDijonSalmon.html">go to the recipe</a>
             </ul>
         </div>
 
@@ -71,7 +71,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/Jct7Wotooma8V52djekcZhFtDQs=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2319909-the-best-thai-coconut-soup-Aja-1x1-1-d2385a72da884e75a7364d6ecca5680e.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">The Best Thai Coconut Soup</li>
-                <a href="#">go to the recipe</a>
+                <a href="recipes/TheBestThaiCoconutSoup.html">go to the recipe</a>
             </ul>
         </div>
 
@@ -79,7 +79,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/_thHoCYoTKOTfgOwqjjygHd5JYQ=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/212721-Indian-Chicken-Curry-Murgh-Kari-mfs_004-06c8dcc88cbd4ec2ab508b8b9ed6aa9d.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">Indian Chicken Curry (Murgh Kari)</li>
-                <a href="#">go to the recipe</a>
+                <a href="recipes/IndianChickenCurry(Murgh Kari).html">go to the recipe</a>
             </ul>
         </div>
 
@@ -87,7 +87,7 @@
             <ul style="list-style: none; width: 300px;">
                 <img src="https://www.allrecipes.com/thmb/gmLgTa_VMVckwR3ccsu8ZDl2iAw=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Chicken-Quesadillas-1x1-1-2000-8b4750792f6e4ac4a26b31cc9c152a84.jpg" alt="" style="width: 100%; height: 100%;">
                 <li style="margin: 10px 0;">Chicken Quesadillas</li>
-                <a href="https://www.allrecipes.com/recipe/239541/chef-johns-fresh-salmon-cakes/">Go to recipe</a>
+                <a href="recipes/ChickenQuesadillas.html">Go to recipe</a>
             </ul>
         </div>
         
