--- a/recipes/ChickenQuesadillas.html
+++ b/recipes/ChickenQuesadillas.html
@@ -8,9 +8,9 @@
 </head>
 <body style="margin: 0; padding: 0; box-sizing: border-box;">
     <main style="width: 80%; margin: 0 auto;"> 
-        <h1 style=" margin: 5% 0;font-family: monospace; padding-left: 30%;">Chef John's Fresh Salmon Cakes</h1>
+        <h1 style=" margin: 5% 0;font-family: monospace; padding-left: 35%;">Chicken Quesadillas</h1>
         <div style="width: 50%; margin: 0 auto;">
-            <img style="margin: 0 15%; width: 50%;" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8187749.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="">
+            <img style="margin: 0 15%; width: 50%;" src="https://www.allrecipes.com/thmb/gmLgTa_VMVckwR3ccsu8ZDl2iAw=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Chicken-Quesadillas-1x1-1-2000-8b4750792f6e4ac4a26b31cc9c152a84.jpg" alt="">
         
 
         <p style="line-height: 30px; width: 80%; text-align: center; margin-top: 10%;">Salmon cakes are one of my go-to emergency meals. Every once in a while I like to use fresh salmon. Salmon is one of those products, like chicken, that's very easy to get into a rut with. People generally find a few recipes that work for them, and just stay with those, but this fairly simple preparation should be easy to add to anyone's rotation. Serve with lemon wedge and remoulade sauce. You can use any bread crumbs instead of panko breadcrumbs, if desired.
@@ -84,7 +84,7 @@
                 <p>Heat olive oil in a skillet over medium-heat. Cook patties in hot oil until golden and cooked through, 3 to 4 minutes per side.</p>
             </li>
             <li style="width: 60%;">
-                <img style="width: 100%;" src="https://www.allrecipes.com/thmb/vtJaLavws0DJyHAbSbL6WyuuRQk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4470536-chef-johns-fresh-salmon-cakes-Chef-John-1x1-1-217fa762bb5c4d098ee1cb0044994758.jpg" alt="">
+                <img style="width: 100%;" src="https://www.allrecipes.com/thmb/gmLgTa_VMVckwR3ccsu8ZDl2iAw=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Chicken-Quesadillas-1x1-1-2000-8b4750792f6e4ac4a26b31cc9c152a84.jpg" alt="">
             </li>
         </ul>
     </div>
